Fix missing entity name && add config for getting the medal

--- a/src/main/resources/assets/paimon/lang/en_us.json
+++ b/src/main/resources/assets/paimon/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "entity.paimon.paimon": "Paimon",
   "itemGroup.paimon": "A Paimon",
   "item.paimon.paimonmedal": "Paimon Medal",
   "paimon.paimonmedalinfo": "Emergency Food...?",
