--- a/src/main/resources/assets/paimon/lang/zh_cn.json
+++ b/src/main/resources/assets/paimon/lang/zh_cn.json
@@ -1,4 +1,5 @@
 {
+  "entity.paimon.paimon": "派蒙",
   "itemGroup.paimon": "派蒙-最好的伙伴",
   "item.paimon.paimonmedal": "派蒙勋章",
   "paimon.paimonmedalinfo": "异世相遇，尽享美味",
