Move the medal to an independent curios slot

--- a/src/main/resources/assets/paimon/lang/en_us.json
+++ b/src/main/resources/assets/paimon/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "curios.identifier.paimon_medal": "Paimon Medal",
   "entity.paimon.paimon": "Paimon",
   "itemGroup.paimon": "A Paimon",
   "item.paimon.paimonmedal": "Paimon Medal",
